feat: :sparkles: HTML Advance
Almost finished HTML structure

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,12 +8,11 @@
     --white: #FFF;
     --black: #000;
 
-    --fuente: 'Montserrat', sans-serif;
 }
 
 * {
     box-sizing: border-box;
     margin: 0;
-    font-family: var(--fuente);
+    font-family: 'Montserrat', sans-serif;
 }
 
